# knapsack-problem

./: .clang-format  .gitignore  1i_100w_100p.txt  CMakeLists.txt  Makefile  README.md  back  back.cpp  back.hpp  backtracking.csv  brute  brute.cpp  brute.hpp  bruteforce.csv  dynamic  dynamic.cpp  dynamic.hpp  generator  generator.cpp  knapsack.h  main.cpp
ROMERA_TP1/: Makefile  back.cpp  brute.cpp  dynamic.cpp
docs/: Knapsack-Problems-Algorithms-and-Computer-Implementations.djv
